# woes

./: .buildconfig  .gitignore  COPYING  README.md  build-flatpak.py  ca.github.mclellac.WebOpsEvaluationSuite.json  com.github.mclellac.WebOpsEvaluationSuite.json  com.github.mclellac.WebOpsEvaluationSuite.json~  meson-postinstall.py  meson.build  pyproject.toml  pyrightconfig.json
data/: ca.github.mclellac.WebOpsEvaluationSuite.desktop.in  ca.github.mclellac.WebOpsEvaluationSuite.gschema.xml  ca.github.mclellac.WebOpsEvaluationSuite.metainfo.xml.in  com.github.mclellac.WebOpsEvaluationSuite.desktop.in  com.github.mclellac.WebOpsEvaluationSuite.gschema.xml  com.github.mclellac.WebOpsEvaluationSuite.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
share/glib-2.0/schemas/: com.github.mclellac.WebOpsEvaluationSuite.gschema.xml  gschemas.compiled
share/icons/hicolor/: icon-theme.cache
share/metainfo/: com.github.mclellac.WebOpsEvaluationSuite.metainfo.xml
share/woes/: woes.gresource
src/: __init__.py  constants.py  dns_page.py  helper.py  http_page.py  http_util.py  main.py  meson.build  nmap_page.py  nmap_scanner.py  preferences.py  style_utils.py  window.py  woes.gresource.xml  woes.in
src/gtk/: dns_page.ui  http_page.ui  nmap_page.ui  preferences.cmb  preferences.ui  style-dark.css  style.css  window.cmb  window.ui
